# long-long-tail

./: .gitignore  CMakeLists.txt  README.md
android/: .gitignore
android/app/: AndroidManifest.xml  build.gradle
android/app/jni/: Android.mk
android/app/src/main/jni/: main.cpp
android/src/: build.gradle
android/src/jni/: Application.mk  main.cpp
android/src/res/values/: strings.xml
desktop/: CMakeLists.txt
desktop/src/: main.cpp
src/: main.cpp
src/common/: KeyboardController.cpp  KeyboardController.h  Model.cpp  Model.h  ModelControllerItf.h  ModelObserverItf.h  Module.h  ModuleItf.h  ModulesSequence.cpp  ModulesSequence.h  Scheduler.cpp  Scheduler.h  View.h
src/common/controller/: KeyboardController.cpp  KeyboardController.h
src/common/model/: Model.cpp  Model.h
src/common/scheduler/: Module.cpp  Module.h  ModulesSequence.cpp  ModulesSequence.h  Scheduler.cpp  Scheduler.h
src/common/view/: View.cpp  View.h
tests/Scheduler/: CMakeLists.txt  main.cpp
